# axum_backend

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
src/: common.rs  db.rs  error.rs  info.rs  init.rs  jwt_auth.rs  main.rs  route.rs  token.rs
src/article/: handler.rs  model.rs  response.rs  schema.rs
src/comment/: handler.rs  mod.rs  model.rs  response.rs  schema.rs
src/crawel/: handler.rs
src/mapper/: mod.rs  userMapper.rs
src/models/: user.rs
src/note/: handler.rs
src/service/: login.rs
src/test/: handler.rs
src/user/: handler.rs  model.rs  response.rs  schema.rs
