[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

models = { path = "./models" }

[dependencies]
axum = {version="0.7.5", features=["multipart"]}
axum-extra = { version = "0.7.2", features = ["cookie"] }
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
futures = { version = "0.3.28", default-features = false, features = ["async-await"] }
mongodb = { version = "2.8.2", features = ["bson-chrono-0_4"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors", "limit", "trace", "fs"] }
argon2 = "0.5.0"
rand_core = { version = "0.6.4", features = ["std"] }
time = "0.3.20"
base64 = "0.21.0"
redis = { version = "0.24.0", features = ["tokio-comp"] }
rand = "0.9.0-alpha.1"
ring = "0.17.8"
data-encoding = "2.6.0"
scraper = "0.12"
reqwest = { version = "0.11", features = ["json", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = { version = "0.7", features = ["io"] }
local-ip-address = "0.5.1"

# jwt生成及验证
jsonwebtoken = "8.3.0"
# uuid生成
uuid = { version = "1.4.0", features = ["serde", "v4"] }
# 用于帮助解析请求头
headers = "0.3"
bcrypt = "0.10"

# log
log = "0.4.0"
env_logger = "0.6.0"




